src/test/resources/Parser/SyntaxErrors/InterfaceInstanceField.front
interface I : A {
    int32 i;
}